--- a/a3wikidarkmode/index.html
+++ b/a3wikidarkmode/index.html
@@ -1,5 +1,8 @@
+<!DOCTYPE html>
+<html>
 <head>
-    <title>A3! Wiki Dark Mode Theme</title>
+	<title>A3! Wiki Dark Mode Theme</title>
+	<link rel="stylesheet" type="text/css" href="/css/main.css">
 </head>
 <body>
     <div class="about">
@@ -13,3 +16,4 @@
 				</ul>
 		</div>
 </body>
+</html>
