--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 		<div class="container">
     		<div class="blurb">
         		<h1>Hi there, I'm Hank Quinlan!</h1>
-				<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
+				<a href ="/a3wikidarkmode">	
+				<img src="https://i.imgur.com/7trfayE.png"></a>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
