--- a/index.html
+++ b/index.html
@@ -3,28 +3,27 @@
 	<head>
 		<title>Mátame</title>
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
+		<link href="https://fonts.googleapis.com/css2?family=Roboto&family=Share+Tech+Mono&display=swap" rel="stylesheet">
+
 	</head>
 	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/a3wikidarkmode">A3! Wiki Dark Mode Theme</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
-        		<h1>Hi there, I'm Hank Quinlan!</h1>
-				<a href ="/a3wikidarkmode">	
-				<img src="https://i.imgur.com/7trfayE.png"></a>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
-        		<li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
-			</ul>
-		</footer>
+		<table cellspacing="0" cellpadding="0">
+			<tr>
+				<td id="navbar">
+					<a href="/about">
+					<img src="https://i.imgur.com/FAcl649.png" title="mátame#2507"></a>
+					<div class="textbar">
+						<a href="/a3wikidarkmode" title="Mátame's A3! Wiki Dark Mode Theme™">A3! Wiki Dark Mode Theme</a>
+					</div>
+				</td>
+				<td id="tbody">
+					<h1>Mátame's A3! Wiki Dark Mode Theme™</h1>
+					<div class="note">Current version: 1.2.1</div><br>
+					AAAA<br>
+					<a href ="/a3wikidarkmode">	
+					<img src="https://i.imgur.com/7trfayE.png" width="80%" title="AAAAAAAA"></a>
+				</td>
+			</tr>
+		</table>
 	</body>
 </html>
