--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
 						<a href="/a3wikidarkmode" title="Mátame's A3! Wiki Dark Mode Theme™">A3! Wiki Dark Mode Theme</a>
 					</div>
 				</td>
-				<td id="tbody">
-					<h1>Mátame's A3! Wiki Dark Mode Theme™</h1>
-					<div class="note">Current version: 1.2.1</div><br>
-					AAAA<br>
+				<td id="tablebody" style="padding-top: 0; vertical-align: middle;">
+					<h1><a href="/a3wikidarkmode" title="A3! Wiki Dark Mode Theme Ver. 1.2.1">Mátame's A3! Wiki Dark Mode Theme™</a></h1>
+					<div class="note">Current version: 1.2.1</div>
+					<div class="subnote">Last updated on 2020.04.09</div>
 					<a href ="/a3wikidarkmode">	
-					<img src="https://i.imgur.com/7trfayE.png" width="80%" title="AAAAAAAA"></a>
+					<img src="https://i.imgur.com/7trfayE.png" width="80%" title="A3! Wiki Dark Mode Theme Ver. 1.2.1"></a>
 				</td>
 			</tr>
 		</table>
