--- a/about/index.html
+++ b/about/index.html
@@ -20,11 +20,27 @@
                         </div>
                     </div>
 				</td>
-				<td id="tablebody">
-					<h1>mátame#2507</h1>
-					<div class="wrappp">
-					Enjoys focusing on the wrong things.
-					</div></td>
+				<td id="tablebody" style="padding-top: 10%;">
+					<table class="tiny">
+						<tr>
+							<td style="vertical-align: top; text-align: right;">
+								<img src="https://1.bp.blogspot.com/-2t2OWPJkN00/Xo9dx9fUQ2I/AAAAAAAAAsY/gQ3Cld1sdzgOqPhtPCQqOIFSa04ARde3wCLcBGAsYHQ/s1600/ezgif.com-crop%2B%252813%2529.gif" style="background-color: crimson; width: 80px; border-radius: 50px; margin-right:20px;"/>
+							</td>
+							<td>
+								<h1 style="margin-top: 10px;">mátame#2507</h1>
+								<div class="wrappp" style="margin-top: 0px;"> 
+									Treats mental boom with gacha. Enjoys focusing on the wrong things. Extracts assets.
+								</div>
+								
+							</td>
+						</tr>
+					</table>
+					<!---<img src="https://1.bp.blogspot.com/-2t2OWPJkN00/Xo9dx9fUQ2I/AAAAAAAAAsY/gQ3Cld1sdzgOqPhtPCQqOIFSa04ARde3wCLcBGAsYHQ/s1600/ezgif.com-crop%2B%252813%2529.gif" style="background-color: crimson; width: 80px; border-radius: 50px; float:left; margin-right:20px;margin-top:-20px;"/>
+					<div><h1>mátame#2507</h1>
+					<div class="wrappp" style="margin-top: 0px;width: 100%;"> 
+					Treats mental boom with gacha. Enjoys focusing on the wrong things. Extracts assets.
+					</div></div>--->
+				</td>
 			</tr>
 		</table>
 	</body>
