--- a/a3wikidarkmode/index.html
+++ b/a3wikidarkmode/index.html
@@ -20,10 +20,14 @@
 						</div>
 					</div>
 				</td>
-				<td id="tablebody"><div class="wrappp">
+				<td id="tablebody">
+					<img src="https://i.imgur.com/7trfayE.png" width="80%">
+					<!---<div style="background-image: url('https://i.imgur.com/7trfayE.png'); height: 250px; margin-right: 20%"></div>--->
+					<div class="wrappp">
+					<span class="updatedon">Last updated on 2020.04.06</span>
 					<h1>A3! Wiki Dark Mode Theme™</h1>
 					<div class="note">Version 1.2.1</div>
-					<div class="subnote">By Mátame <span style="float:right">Last updated on 2020.04.09</span></div>
+					<div class="subnote">By Mátame</div><br>
 					
 					Ever felt pain after long, long hours of hard work trying to manage Mankai theater? Wanted to just lay down, close your eyes and <i>rest</i>? Well, suffer no more with this brand new <u>A3! Wiki Dark Mode Theme</u>™️ made especially for the wiki and <i>your</i> eyes!<br>
 
@@ -48,7 +52,7 @@
 					&#10551; Besides the theme's name "A3! Wiki Dark Theme" click on the <u>Search update</u> button.<br>
 					&#10551; If there's an update, you will get an <u>Install update</u> button, click on it to update.<br>
 					
-					<h2>Afterword:</h2>
+					<h2>Lastly...</h2>
 					Huge, huge, huge, h u g e thanks to <b>Ryuji</b>, <b>Alice</b> and <b>Yukari</b> for helping me out by testing this thing and finding stuff I missed! After having my eyes hurt because of all the white, this is a thing I needed to get out of my system or bleed my eyes out. Thanks for indulging me! 🤍 (also huge thanks to Ryuji for the nice notice graphic he made for this announcement! It was going to be just the screenshot KEKW).<br>
 					</div>
 				</td>
