--- a/a3wikidarkmode/index.html
+++ b/a3wikidarkmode/index.html
@@ -16,16 +16,17 @@
 						<img src="https://i.imgur.com/FAcl649.png" title="mátame#2507"></a>
 						<div class="textbar">
 							<a href="/" title="Go back home" style="font-size: 16px; color: coral;">↜ </a>
-							<a href="/a3wikidarkmode" title="Mátame's A3! Wiki Dark Mode Theme™">A3! Wiki Dark Mode Theme</a>
+							<a href="/a3wikidarkmode" title="A3! Wiki Dark Mode Theme™">A3! Wiki Dark Mode Theme</a>
 						</div>
 					</div>
 				</td>
 				<td class="changelog">
 					<div>
 						<a href="#update"><h1>UPDATE</h1></a>
-						<h2>Ver. 1.2.2</h2>
-						› Updated for the new EN tabs on the home page.<br>
-						› Fixed table headings for Sakuya, Tsuzuru, Citron, Chikage, all Summer Troupe and Sakyo, so now their tables are actually readable.
+						<h2>Ver. 1.3.0</h2>
+						› Fixed the underline for the EN pages section on the main sidebar.<br>
+						› Fixed Mixed Play pages' cast banners that were gray. Now all banners have a unified color.<br>
+						› Added border radius to EN scout and event banners to hide their white pointed corners.
 					</div>
 				</td>
 				<td id="tablebody" style="padding-left:5%;">
@@ -37,7 +38,7 @@
 						<div class="note">Version 1.2.2</div>
 						<div class="subnote">By Mátame</div><br>
 						
-						Ever felt pain after long, long hours of hard work trying to manage Mankai theater? Wanted to just lay down, close your eyes and <i>rest</i>? Well, suffer no more with this brand new <u>A3! Wiki Dark Mode Theme</u>™️ made especially for the wiki and <i>your</i> eyes!<br>
+						Ever felt pain after long, long hours of hard work trying to manage Mankai theater? Wanted to just lay down, close your eyes and <i>rest</i>? Well, suffer no more with this brand new <u>A3! Wiki Dark Mode Theme</u>™️ made especially for the wiki and <i>your</i> eyes!<br><br>
 
 						<h2>How to install:</h2>
 						&#10551; First, install <a href="https://add0n.com/stylus.html">Stylus</a> on your browser.<br>
@@ -51,7 +52,7 @@
 						<p><b>!</b> This theme only works with the <u>Timeless</u> wiki skin. Might do a version for the Vector skin if there's a need for it.</p>
 						<p><b>!</b>  It is known some event pages using an old format have tables that look out of place. These tables will be automatically fixed when those pages are updated to the current format.</p>
 						<p><b>!</b>  This theme is not 100% finished nor is it perfect. If you have any suggestions or encounter any funny looking thing, feel free to message me on discord @ <span style="font-weight: bold;">mátame#2507</span>.</p>					
-						</div>
+						</div><br>
 
 						<h2><a id="update">How to update:</a></h2>
 						To check and update the theme for when new versions are released:<br>
@@ -59,7 +60,7 @@
 						&#10551; Click on <u>Manage</u>.<br>
 						&#10551; Besides the theme's name "A3! Wiki Dark Theme" click on the <u>Search update</u> button.<br>
 						&#10551; If there's an update, you will get an <u>Install update</u> button, click on it to update.<br>
-						Or force update by clicking on <a href="https://gist.github.com/Decepcion/79fb14ae4d8a58ef6fc517352139f6a6/raw/A3!%2520Wiki%2520Dark%2520Theme.user.css">this link</a>.
+						Or force update by clicking on <a href="https://gist.github.com/Decepcion/79fb14ae4d8a58ef6fc517352139f6a6/raw/A3!%2520Wiki%2520Dark%2520Theme.user.css">this link</a>.<br>
 						
 						<h2>Lastly...</h2>
 						Huge, huge, huge, h u g e thanks to <b>Ryuji</b>, <b>Alice</b> and <b>Yukari</b> for helping me out by testing this thing and finding stuff I missed! After having my eyes hurt because of all the white, this is a thing I needed to get out of my system or bleed my eyes out. Thanks for indulging me! 🤍 (also huge thanks to Ryuji for the nice notice graphic he made for this announcement! It was going to be just the screenshot KEKW).<br>
