--- a/a3wikidarkmode/index.html
+++ b/a3wikidarkmode/index.html
@@ -25,7 +25,7 @@
 						<a href="#update"><h1>UPDATE</h1></a>
 						<h2>Ver. 1.3.0</h2>
 						› Fixed the underline for the EN pages section on the main sidebar.<br>
-						› Fixed Mixed Play pages' cast banners that were gray. Now all banners have a unified color.<br>
+						› Fixed Mixed Play pages' cast banners that were #ddd. Now all banners have an unified color.<br>
 						› Added border radius to EN scout and event banners to hide their white pointed corners.
 					</div>
 				</td>
