--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Mátame</title>
+		<title>Mátame /</title>
 		<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
 		<link href="https://fonts.googleapis.com/css2?family=Roboto&family=Share+Tech+Mono&display=swap" rel="stylesheet">
@@ -14,7 +14,7 @@
 					<a href="/about">
 					<img src="https://i.imgur.com/FAcl649.png" title="mátame#2507"></a>
 					<div class="textbar">
-						<a href="/a3wikidarkmode" title="Mátame's A3! Wiki Dark Mode Theme™">A3! Wiki Dark Mode Theme</a>
+						<a href="/a3wikidarkmode" title="A3! Wiki Dark Mode Theme™">A3! Wiki Dark Mode Theme</a>
 					</div>
 				</td>
 				<td id="tablebody" style="padding-top: 0; vertical-align: middle;">
