--- a/a3wikidarkmode/index.html
+++ b/a3wikidarkmode/index.html
@@ -23,19 +23,17 @@
 				<td class="changelog">
 					<div>
 						<a href="#update"><h1>UPDATE</h1></a>
-						<h2>Ver. 1.3.0</h2>
-						› Fixed the underline for the EN pages section on the main sidebar.<br>
-						› Fixed Mixed Play pages' cast banners that were #ddd. Now all banners have an unified color.<br>
-						› Added border radius to EN scout and event banners to hide their white pointed corners.
+						<h2>Ver. 1.3.2</h2>
+						› Fixed pointed corners for the banners in the Revival Tryouts (EN) and Rerelease Scouts pages.<br>
 					</div>
 				</td>
 				<td id="tablebody" style="padding-left:5%;">
 					<img src="https://i.imgur.com/TORSkbU.png" width="80%" style="opacity: 0.7;">
 					<!---<div style="background-image: url('https://i.imgur.com/7trfayE.png'); height: 250px; margin-right: 20%"></div>--->
 					<div class="wrappp">
-						<span class="updatedon">Last updated on 2020.08.25</span>
+						<span class="updatedon">Last updated on 2020.12.18</span>
 						<h1>A3! Wiki Dark Mode Theme™</h1>
-						<div class="note">Version 1.3.0</div>
+						<div class="note">Version 1.3.2</div>
 						
 						Ever felt pain after long, long hours of hard work trying to manage Mankai theater? Wanted to just lay down, close your eyes and <i>rest</i>? Well, suffer no more with this brand new <u>A3! Wiki Dark Mode Theme</u>™️ made especially for the wiki and <i>your</i> eyes!<br>
 
