--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
 					</div>
 				</td>
 				<td id="tablebody" style="padding-top: 0; vertical-align: middle;">
-					<h1><a href="/a3wikidarkmode" title="A3! Wiki Dark Mode Theme Ver. 1.2.1">A3! Wiki Dark Mode Theme™</a></h1>
-					<div class="note">Current version: 1.3.0</div>
-					<div class="subnote">Last updated on 2020.08.25</div>
+					<h1><a href="/a3wikidarkmode" title="A3! Wiki Dark Mode Theme Ver. 1.3.2">A3! Wiki Dark Mode Theme™</a></h1>
+					<div class="note">Current version: 1.3.2</div>
+					<div class="subnote">Last updated on 2020.12.18</div>
 					<a href ="/a3wikidarkmode">	
-					<img src="https://i.imgur.com/7trfayE.png" width="80%" title="A3! Wiki Dark Mode Theme Ver. 1.2.2"></a>
+					<img src="https://i.imgur.com/7trfayE.png" width="80%"></a>
 				</td>
 			</tr>
 		</table>
